# pogues-ui-test

./: LICENSE  README.md  pyproject.toml  setup-datalab.sh  setup-python-env.sh  z.py
src/: HomePage.py
test/: test_everything_ok.py  test_home_page_display.py
