[tool.poetry]
name = "pogues-ui-test"
version = "0.1.0"
description = "UI tests for Pogues"
authors = ["Romain Tailhurat <romain.tailhurat@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
pytest = "^6.2"
splinter = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
